--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -45,7 +45,7 @@
     <string name="import_sim_contacts_message">Importing SIM contacts\u2026</string>
     <string name="ContactMultiImportConfirmation">The selected contacts will be imported.</string>
     <string name="import_finish">"Import finished"</string>
-    <string name="import_stop">"Import was canceled</string>
+    <string name="import_stop">"Import was canceled"</string>
     <string name="too_many_contacts_add_to_group">No more than <xliff:g id="count">%d</xliff:g> contacts can be added</string>
     <!-- Multi Delete Contacts related strings -->
     <string name="ContactMultiDeleteConfirmation">The selected contacts will be deleted.</string>
